name:                hMollom
version:             0.1
cabal-version:       >= 1.2
stability:           experimental
synopsis:            Library to interact with the Mollom anti-spam service
description:         Library to interact with the Mollom anti-spam service
license:             BSD
license-file:        LICENSE
author:              Andy Georges
homepage:            http://github.com/itkovian/hMollom
category:            Net
maintainer:          itkovian@gmail.com
build-Type:          Simple
extra-source-files:  src/Net/Mollom/Auth.hs


library
    build-depends:     
        base >= 3, 
        haxr >= 3000.5,
        old-locale >= 1,
        time >= 1.1.4,
        Crypto >= 4.2.0,
        bytestring >= 0.9.1.4,
        dataenc >= 0.13,
        mtl >= 1.1.0.2
    exposed-modules:   Net.Mollom
    ghc-options:       -Wall
    hs-source-dirs:      src

